{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 139,
  "lineage": "76be5e68-2762-ec71-ddd1-0d30bee9d7ea",
  "resources": [
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/networkInterfaces/windows-vm-nic",
            "internal_domain_name_suffix": "oxjbimufso4e5pache3tnlpupg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vm-ip-configuration",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/virtualNetworks/VN1/subnets/app-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "60-45-BD-DC-91-40",
            "name": "windows-vm-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "RSARG",
            "virtual_machine_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Compute/virtualMachines/windows-vm"
          },
          "dependencies": [
            "module.Networking.azurerm_bastion_host.bastion",
            "module.Networking.azurerm_network_security_group.NSG1",
            "module.Networking.azurerm_public_ip.bastionIP",
            "module.Networking.azurerm_resource_group.RG1",
            "module.Networking.azurerm_subnet.app_subnet",
            "module.Networking.azurerm_subnet.bastion_subnet",
            "module.Networking.azurerm_virtual_network.VN1"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/networkSecurityGroups/NSG1",
            "location": "eastus",
            "name": "NSG1",
            "resource_group_name": "RSARG",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.azurerm_resource_group.RG1"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/networkSecurityGroups/apps-nsg",
            "location": "eastus",
            "name": "apps-nsg",
            "resource_group_name": "RSARG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnyHTTPSInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAnyHTTPSOutbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.azurerm_network_security_group.NSG1",
            "module.Networking.azurerm_resource_group.RG1",
            "module.Networking.azurerm_subnet.app_subnet",
            "module.Networking.azurerm_virtual_network.VN1"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/networkSecurityGroups/apps-nsg/securityRules/Deny-All-Inbound",
            "name": "Deny-All-Inbound",
            "network_security_group_name": "apps-nsg",
            "priority": 200,
            "protocol": "*",
            "resource_group_name": "RSARG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.azurerm_network_security_group.NSG1",
            "module.Networking.azurerm_network_security_group.nsg_apps",
            "module.Networking.azurerm_resource_group.RG1",
            "module.Networking.azurerm_subnet.app_subnet",
            "module.Networking.azurerm_virtual_network.VN1"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastionIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/publicIPAddresses/BastionIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.169.180.26",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "BastionIP",
            "resource_group_name": "RSARG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.Networking.azurerm_network_security_group.NSG1",
            "module.Networking.azurerm_resource_group.RG1",
            "module.Networking.azurerm_subnet.bastion_subnet",
            "module.Networking.azurerm_virtual_network.VN1"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/virtualNetworks/VN1/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RSARG",
            "virtual_network_name": "VN1"
          },
          "dependencies": [
            "module.Networking.azurerm_network_security_group.NSG1",
            "module.Networking.azurerm_resource_group.RG1",
            "module.Networking.azurerm_virtual_network.VN1"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/virtualNetworks/VN1/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RSARG",
            "virtual_network_name": "VN1"
          },
          "dependencies": [
            "module.Networking.azurerm_network_security_group.NSG1",
            "module.Networking.azurerm_resource_group.RG1",
            "module.Networking.azurerm_virtual_network.VN1"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/virtualNetworks/VN1/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/networkSecurityGroups/apps-nsg",
            "subnet_id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/virtualNetworks/VN1/subnets/app-subnet"
          },
          "dependencies": [
            "module.Networking.azurerm_network_security_group.NSG1",
            "module.Networking.azurerm_network_security_group.nsg_apps",
            "module.Networking.azurerm_resource_group.RG1",
            "module.Networking.azurerm_subnet.app_subnet",
            "module.Networking.azurerm_virtual_network.VN1"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3214d275-9385-4fbc-bc02-393b36adf47e",
            "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/virtualNetworks/VN1",
            "location": "eastus",
            "name": "VN1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "RSARG",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": false,
                "delegation": [
                  {
                    "name": "delegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/action"
                        ],
                        "name": "Microsoft.Web/serverFarms"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/virtualNetworks/VN1/subnets/vnet_app_service_integration",
                "name": "vnet_app_service_integration",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/virtualNetworks/VN1/subnets/app-subnet",
                "name": "app-subnet",
                "private_endpoint_network_policies": "Enabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/networkSecurityGroups/apps-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/b98a4ecc-db16-46cc-9fdd-d725310cda6a/resourceGroups/RSARG/providers/Microsoft.Network/virtualNetworks/VN1/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "RouteTableEnabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.Networking.azurerm_network_security_group.NSG1",
            "module.Networking.azurerm_resource_group.RG1"
          ]
        }
      ]
    }
  ]
}